--- a/configuration/caspar.yml
+++ b/configuration/caspar.yml
@@ -2,12 +2,14 @@
 
 core:
   url: "http://dragonevo.l/"
-  modules: ['main', 'b2db']
+  libraries: ['main', 'b2db']
+  debug: true
   language: 'en_US'
   site_name: 'Dragon Evo CCG'
   stylesheets: ['css/styles']
-  javascripts: ['prototype', 'scriptaculous']
-  user_classname: \caspar\core\User
+  javascripts: ['js/prototype.js', 'js/scriptaculous.js', 'js/main.js']
+  user_classname: \application\entities\User
+  salt: "$sra1F6s"
   response_classname: \caspar\core\Response
 
 services:
