--- a/configuration/routes.yml
+++ b/configuration/routes.yml
@@ -50,6 +50,27 @@ admin_card_of_the_week:
   module: admin
   action: cardoftheweek
 
+admin_news:
+  url: /admin/news
+  module: admin
+  action: news
+
+create_news:
+  url: /admin/news/edit
+  module: admin
+  action: editnews
+  parameters: {mode: new}
+
+edit_news:
+  url: /admin/news/edit/:id
+  module: admin
+  action: editnews
+
+news:
+  url: /news/:year/:month/:day/:title/:id
+  module: main
+  action: news
+
 new_card:
   url: /admin/:card_type/card
   module: admin
